26. October 2003
----------------
[Kjartan Mannes]
- Refactored the extra fields to not require an extra database field by
  storing extra fields in a data field (requires MySQL update).
- Improved timezone handling.
- Improved calendar.
- Removed "date picker".
- Renamed posting permission to 'maintain events' to be more consistent
  with other modules.
- Removed 'access events' and 'administer events' permissions.
- Added support for user updating of events.
- Removed dead code, cleaned up other code, no stone left unturned.
- Added event.css to style calendar and other output.
- Updated INSTALL and TODO.

18. October 2003
----------------
event.module [Moshe Weitzman]
- updated for new help and menu and content hooks
- able to add custom fields by editing top of source file
- refactored event_page() enabling easier code re-use
- removed some cruft from event_access()
- no error when taxonomy is disabled
- refactored 'view' to use simple list of fields.

12. October 2003
----------------
event.module [Moshe Weitzman]
- now showing current month's nodes on main page when no other date
  was specified.
- added paging to this display.
- refactored event_page() enabling easier code re-use

13. June 2003
-------------
Major overhaul by Craig Courtney

WARNING: This breaks compatibility with all prior versions of
         event.module!

- removed image stuff
- removed parent stuff
- made more css and theme friendly
- ... 

23. September 2002
------------------
event.module [Gerhard Killesreiter]
- changed "post content" to "post events"
- changed "access content" to "access events"

6. September 2002
-----------------
event.module [Gerhard Killesreiter]
- applied patch by Robin Elfrink <robin@a1.nl>

01. June 2002
-------------
event.module [Kjartan Mannes]
- updated module to 4.0.0.

08. Feburary 2002
-----------------
event.module [Kjartan Mannes]
- fixed parent nodes showing up as sub events on node preview.

30. October 2001
----------------