@@ -12,16 +12,16 @@
   padding-right: 0.2em;
 }
 
-#calendar table {
+.event-calendar table {
   border: 1px solid #242;
   border-collapse: collapse;
   border-spacing: 0;
 }
-#calendar tr {
+.event-calendar tr {
   padding: 0;
   margin: 0;
 }
-#calendar th {
+.event-calendar th {
   color: #000;
   background: #aac;
   font-size: 120%;
@@ -29,22 +29,22 @@
   padding: 1px 0.33em;
   border: 1px solid #242;
 }
-#calendar th.heading {
+.event-calendar th.heading {
   border-width: 1px 0px;
 }
-#calendar th.prev {
+.event-calendar th.prev {
   text-align: left;
   border-width: 1px 0px 1px 1px;
 }
-#calendar th.next {
+.event-calendar th.next {
   text-align: right;
   border-width: 1px 1px 1px 0px;
 }
-#calendar th a {
+.event-calendar th a {
   font-weight: bold;
   color: #363636;
 }
-#calendar td {
+.event-calendar td {
   border: 1px solid #bbb;
   color: #777;
   text-align: right;
@@ -52,23 +52,23 @@
   margin: 0;
   padding: 0;
 }
-#calendar td a {
+.event-calendar td a {
   font-weight: bold;
   text-decoration: none;
 }
-#calendar tr {
+.event-calendar tr {
   background: white;
 }
-#calendar td.sat, #calendar td.sun {
+.event-calendar td.sat, .event-calendar td.sun {
   background: #fdd;
 }
-#calendar td.today {
+.event-calendar td.today {
   background: #f99;
 }
-#calendar td.selected {
+.event-calendar td.selected {
   background: #99f;
 }
-#calendar td.days {
+.event-calendar td.days {
   color: #cce;
   background: #224;
   font-weight: bold;
@@ -78,17 +78,17 @@
   border-width: 0 1px 1px 0;
 }
 
-#event #calendar table {
+#event .event-calendar table {
   width: 100%;
 }
-#event #calendar td {
+#event .event-calendar td {
   width: 14.3%;
 }
-#calendar div.event {
+.event-calendar div.event {
   text-align: left;
   margin: 0.25em 0 1em 0.25em;
 }
-#calendar div.day {
+.event-calendar div.day {
   float: right;
   text-align: center;
   border: 1px solid gray;
@@ -97,24 +97,24 @@
   margin: 0;
   background: #f3f3f3;
 }
-#calendar div.event span {
+.event-calendar div.event span {
   display: block;
   color: #000;
   padding: 0;
   margin: 0;
 }
-#calendar div.event span.time {
+.event-calendar div.event span.time {
   font-weight: bold;
 }
-#calendar div.event span.title a {
+.event-calendar div.event span.title a {
   font-weight: normal;
   font-size: 0.9em;
   color: #000;
 }
-#calendar div.event span.location {
+.event-calendar div.event span.location {
   font-style: italic;
   color: #555;
 }
-#event #calendar .event-empty {
+#event .event-calendar .event-empty {
   min-height: 6em;
 }
